# troubleshooting-system

./: Cargo.toml
docs/: ExampleGraph 1.md  Алгоритм.md  Вопросы.md  Информационный критерий.md  Пример 1.md
graph/: Cargo.toml
graph/crates/builder/: Cargo.toml
graph/crates/builder/src/: index.rs
src/: error.rs  graph.rs  information_criterion.rs  main.rs  math.rs  prelude.rs  splitting_in_half_method.rs
src/graph/: block.rs  mod.rs  subgraph.rs
