[workspace]

members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = [
    "Martin Junghanns <github@s1ck.dev>",
    "Paul Horn <developer@knutwalker.de>",
]
rust-version = "1.74.1"
repository = "https://github.com/neo4j-labs/graph"
edition = "2021"
license = "MIT"

[workspace.dependencies]
ahash = "0.8.3"
arrow = "49.0.0"
arrow-flight = "49.0.0"
async-compression = { version = "0.4.5", features = ["tokio", "zstd"] }
async-trait = "0.1.72"
atoi = "2.0.0"
atomic = "0.6.0"
bytemuck = "1.14.0"
atomic_float = "0.1.0"
byte-slice-cast = "1.2.2"
clap = { version = "4.3", features = ["derive"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
dashmap = "5.5.0"
delegate = "0.12.0"
directories = "5.0.1"
env_logger = "0.10.1"
fast-float = "0.2.0"
float-ord = "0.3.2"
futures = "0.3.28"
fxhash = "0.2.1"
gdl = "0.2.7"
itertools = "0.12.0"
linereader = "0.4.0"
log = "0.4.19"
memmap2 = "0.9.3"
nanorand = "0.7.0"
num = "0.4.1"
num_cpus = "1.16.0"
num-format = "0.4.4"
page_size = "0.6.0"
parking_lot = "0.12.1"
pico-args = "0.5.0"
polars = { version = "0.35.4", default_features = false, features = ["fmt"] }
rand = "0.8.5"
rayon = "1.7.0"
reqwest = { version = "0.11", features = ["stream"] }
serde_json = "1.0.103"
serde = { version = "1.0.174", features = ["derive"] }
tap = "1.0.1"
tempfile = "3.7.0"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"], default-features = true }
tokio-tar = "0.3.1"
tokio-util = {version = "0.7.8", features = ["io"] }
tonic = "0.10.2"

[workspace.metadata.release]
pre-release-commit-message = "Release {{crate_name}} {{version}}"
